--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,13 @@
   "name": "evernote-voice",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.13"
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
+    "ngCordova": "~0.1.6-alpha"
   },
   "dependencies": {
-    "angular": "*",
+    "angular": "~1.3.x",
     "restangular": "~1.4.0",
-    "angular-sanitize": "~1.3.0"
+    "angular-sanitize": "~1.3.0",
+    "ngCordova": "~0.1.6-alpha"
   }
 }
